<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.bolanleonifade.remoteconnection.ReportActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/toolbar_background_colour"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle">

        <ImageButton
            android:id="@+id/report_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:title="@string/back" />

        <TextView
            android:id="@+id/report_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:text="@string/report"
            android:textColor="@color/white"
            android:theme="@style/ToolBarStyle.TextAppearance" />
    </android.support.v7.widget.Toolbar>
    <!-- Real content goes here -->


    <ScrollView
        android:id="@+id/report_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/general_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/dark_grey">

                <TextView
                    android:id="@+id/report_general"
                    style="@style/SettingsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:text="@string/general" />

                <ImageButton
                    android:id="@+id/report_general_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:onClick="expandOrContractButton"
                    android:src="@drawable/ic_expand_less_black"
                    android:tag="@string/contract" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_general_views_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/general_layout"
                android:visibility="visible">

                <TextView
                    android:id="@+id/report_general_user_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/report_general_user_value_text_view"
                    android:paddingTop="15dp"
                    android:text="@string/general_user"
                    android:textStyle="bold"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_user_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/report_general_host_text_view"
                    android:layout_toEndOf="@+id/report_general_host_text_view"
                    android:ellipsize="end"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_host_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/report_general_user_text_view"
                    android:labelFor="@+id/report_general_host_value_text_view"
                    android:paddingTop="15dp"
                    android:text="@string/general_host"
                    android:textStyle="bold"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_host_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/report_general_local_dir_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/report_general_host_text_view"
                    android:ellipsize="end"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_local_dir_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/report_general_host_text_view"
                    android:labelFor="@+id/report_general_local_dir_value_text_view"
                    android:paddingTop="15dp"
                    android:text="@string/local_dir"
                    android:textStyle="bold"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_local_dir_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/report_general_remote_dir_text_view"
                    android:layout_toEndOf="@+id/report_general_local_dir_text_view"
                    android:ellipsize="end"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_remote_dir_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/report_general_local_dir_text_view"
                    android:labelFor="@+id/report_general_remote_dir_value_text_view"
                    android:paddingTop="15dp"
                    android:text="@string/remote_dir"
                    android:textStyle="bold"
                    android:theme="@style/SettingsTextAppearance" />


                <TextView
                    android:id="@+id/report_general_remote_dir_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/report_general_time_value_text_view"
                    android:layout_toEndOf="@+id/report_general_remote_dir_text_view"
                    android:ellipsize="end"
                    android:theme="@style/SettingsTextAppearance" />

                <!-- Insert type here -->
                <TextView
                    android:id="@+id/report_general_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/report_general_remote_dir_text_view"
                    android:labelFor="@id/report_general_time_value_text_view"
                    android:paddingTop="15dp"
                    android:text="@string/time"
                    android:textStyle="bold"
                    android:theme="@style/SettingsTextAppearance" />

                <TextView
                    android:id="@+id/report_general_time_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/report_general_remote_dir_text_view"
                    android:layout_toEndOf="@+id/report_general_time_text_view"
                    android:ellipsize="end"
                    android:theme="@style/SettingsTextAppearance" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_files_uploaded_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@id/report_general_views_layout"
                android:background="@color/dark_grey">

                <TextView
                    android:id="@+id/report_files_uploaded"
                    style="@style/SettingsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/files_uploaded" />

                <ImageButton
                    android:id="@+id/report_files_uploaded_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:onClick="expandOrContractButton"
                    android:src="@drawable/ic_expand_more_black"
                    android:tag="@string/expand" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_files_uploaded_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_files_uploaded_layout"
                android:visibility="gone">

                <TextView
                    android:id="@+id/report_files_uploaded_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_files_downloaded_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@id/report_files_uploaded_views"
                android:background="@color/dark_grey">

                <TextView
                    android:id="@+id/report_files_downloaded"
                    style="@style/SettingsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/files_downloaded" />

                <ImageButton
                    android:id="@+id/report_files_downloaded_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:onClick="expandOrContractButton"
                    android:src="@drawable/ic_expand_more_black"
                    android:tag="@string/expand" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_files_downloaded_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_files_downloaded_layout"
                android:visibility="gone">

                <TextView
                    android:id="@+id/report_files_downloaded_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_error_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@id/report_files_downloaded_views"
                android:background="@color/dark_grey">

                <TextView
                    android:id="@+id/report_error"
                    style="@style/SettingsTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/error" />

                <ImageButton
                    android:id="@+id/report_error_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:onClick="expandOrContractButton"
                    android:src="@drawable/ic_expand_more_black"
                    android:tag="@string/expand" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_error_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_error_layout"
                android:visibility="gone">

                <TextView
                    android:id="@+id/report_error_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
